[tool.poetry]
name = "accio"
version = "0.1.0"
description = "Accio is a clipboard manager"
authors = ["Odravison Amaral <oamaraljr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
screeninfo = "^0.8"
keyboard = "^0.13"
pyperclip = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"